# kaagle_draiqws

./: README.md
my_fastapi_project/: README.md  pyproject.toml  trained_model.pkl
my_fastapi_project/my_fastapi_project/: app.py
