[tool.poetry]
name = "my-fastapi-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
joblib = "^1.4.2"
pandas = "^2.2.2"
xgboost = "^2.1.1"
lightgbm = "^4.5.0"
catboost = "^1.2.7"
scikit-learn = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"